--- a/src/components/contacts.scss
+++ b/src/components/contacts.scss
@@ -31,16 +31,39 @@
       background-color: #f5f5f5;
     }
 
-    button {
-      padding: 8px;
+    .btn-delete {
       background-color: #e74c3c;
       color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
 
       &:hover {
         background-color: #c0392b;
+      }
+    }
+
+    .btn-save {
+      background-color: #2ecc71;
+      color: #fff;
+
+      &:hover {
+        background-color: #27ae60;
+      }
+    }
+
+    .btn-cancel {
+      background-color: #ccc;
+      color: #fff;
+
+      &:hover {
+        background-color: #b0aeae;
+      }
+    }
+
+    .btn-add-contact {
+      background-color: #3498db;
+      color: #fff;
+
+      &:hover {
+        background-color: #2980b9;
       }
     }
   }
