--- a/src/components/contacts.scss
+++ b/src/components/contacts.scss
@@ -2,6 +2,9 @@
   background-color: #ececec;
   padding: 20px;
   min-height: 100vh;
+  max-width: 50%;
+  margin: 0 auto;
+
 
   h2 {
     color: #333;
