--- a/src/components/contacts.scss
+++ b/src/components/contacts.scss
@@ -1,9 +1,11 @@
 .main-page-container {
   background-color: #ececec;
   padding: 20px;
-  min-height: 50vh;
-  max-width: 50%;
-  margin: 0 auto;
+  min-height: 60vh;
+  max-width: 60%;
+  margin: 2em auto;
+  border-radius: 4px;
+  border: 1px solid #b9b9b9;
 
   h2 {
     color: #333;
